<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D7D5DA"
        android:orientation="vertical"

        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img"
                android:layout_width="83dp"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher_round">

            </de.hdodenhof.circleimageview.CircleImageView>

            <LinearLayout
                android:layout_width="321dp"
                android:layout_height="103dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <TextView
                        android:id="@+id/bkname"
                        android:layout_width="148dp"
                        android:layout_height="42dp"
                        android:layout_marginLeft="20dp"
                        android:text="@string/bkname"
                        android:textColor="#5C5757"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/updatebut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:text="@string/update"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:backgroundTint="#FFEB3B" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="49dp"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/bkauthor"
                        android:layout_width="148dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/price"
                        android:textColor="#5C5757"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/deletebutt"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:text="@string/delete"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:backgroundTint="#FFEB3B" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>