<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"

        android:background="@color/white"
        android:text="Add Book Details"
        android:textAlignment="center"


        android:textColor="#00BCD4"
        android:textSize="25dp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="577dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="118dp"
                android:layout_height="36dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="Book Name"
                android:textColor="#112178"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/bname"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:ems="10"
                android:hint="@string/harry"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="Author"
                android:textColor="#112178"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/bAname"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:ems="10"
                android:hint="@string/authr"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="Publisher"
                android:textColor="#112178"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/bpname"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:ems="10"
                android:hint="@string/publishernamehint"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="Price"
                android:textColor="#112178"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/bprice"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:ems="10"
                android:hint="@string/pricehint"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="Quantity"
                android:textColor="#112178"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/bquan"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:ems="10"
                android:hint="@string/quanthint"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="Description"
                android:textColor="#112178"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/bdesc"
                android:layout_width="296dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/deshint"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="79dp"
                    android:layout_height="94dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="6dp" />

                <Button
                    android:id="@+id/btnbrowse"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="70dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="Browse"
                    android:textColor="#0A0B0B"
                    android:textStyle="bold"
                    app:backgroundTint="#C3C3C0" />

                <EditText
                    android:id="@+id/txtdata"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="Name" />

            </LinearLayout>

            <Button
                android:id="@+id/insert"
                android:layout_width="183dp"
                android:layout_height="52dp"
                android:layout_marginLeft="80dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="SAVE"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:backgroundTint="#FFEB3B" />

            <Button
                android:id="@+id/df"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Button" />

            <EditText
                android:id="@+id/bid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>