<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/purple_500"
        android:gravity="center"
        android:text="Add new book"
        android:textColor="#fff"
        android:textSize="25dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="Book name"
                android:textColor="#091975"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtbookname"
                android:layout_width="315dp"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="Author"
                android:textColor="#091975"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/author"
                android:layout_width="308dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="Publisher"
                android:textColor="#091975"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/bookpublisher"
                android:layout_width="304dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/price"
                android:textColor="#091975"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/bkprice"
                android:layout_width="301dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/qua"
                android:textColor="#091975"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/bkquant"
                android:layout_width="291dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:text="@string/Descrip"
                android:textColor="#091975"
                android:textSize="20sp"
                android:textStyle="bold" />

            <MultiAutoCompleteTextView
                android:id="@+id/bkdes"
                android:layout_width="345dp"
                android:layout_height="137dp" />

            <Button
                android:id="@+id/addbtn"
                android:layout_width="189dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="save"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold"
                app:backgroundTint="#FFEB3B" />

            <Button
                android:id="@+id/bkbutton"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="85dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"
                android:gravity="center"
                android:text="Back"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold"
                app:backgroundTint="#FFEB3B" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>