<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/purple_500"
        android:gravity="center"
        android:text="Update Details"
        android:textColor="#fff"
        android:textSize="25dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layerType="none"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="Book Name"
                android:textColor="#111F6C"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtbookname"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center|top" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="Author name"
                android:textColor="#111F6C"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/author"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center|top" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="Publisher"
                android:textColor="#111F6C"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/bookpublisher"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center|top" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/price"
                android:textColor="#111F6C"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/bprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/Quantity"
                android:textColor="#111F6C"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/bkquantityy"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center|top" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/Descriptionupdate"
                android:textColor="#111F6C"
                android:textSize="20sp"
                android:textStyle="bold" />

            <MultiAutoCompleteTextView
                android:id="@+id/bkdescription"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:gravity="center|top" />

            <Button
                android:id="@+id/btnupdate"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="update"
                android:textColor="@color/black"
                android:textSize="21dp"
                android:textStyle="bold"
                app:backgroundTint="#FFEB3B" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>